--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Earlham College Software Carpentry Workshop"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: tongmi@earlham.edu
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -20,7 +20,7 @@ kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
-repository: <USERNAME>/<PROJECT>
+repository: <marschmi>/<2018-02-15-earlham>
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
